<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#403a46"
    android:padding="16dp"
    tools:context="bg.cloudvps.naskodaskalov.scorekeeperapp.MainActivity"
    android:orientation="vertical">



    <LinearLayout
        android:id="@+id/home_layout"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#EDFAFD"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp"
            android:text="@string/set_sports"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="#FFF"
            android:padding="10dp"
            android:textColor="#696969"
            android:layout_marginBottom="10dp"
            android:hint="@string/home_team"
            android:id="@+id/nameTeamA"/>

        <EditText
            android:layout_width="match_parent"
            android:background="#FFF"
            android:padding="10dp"
            android:textColor="#696969"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/away_team"
            android:id="@+id/nameTeamB"/>

        <Button
            android:id="@+id/football_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Football"
            android:background="#15ac89"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:onClick="showFootballLayout"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar4"
        android:visibility="visible"
        tools:visibility="visible"
        android:indeterminate="false"
        android:layout_gravity="center"
        android:max="@android:integer/config_shortAnimTime"
        android:progress="@android:integer/config_shortAnimTime" />
</LinearLayout>

</layout>