<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:background="#403a46"
    android:layout_height="match_parent"
    tools:context="bg.cloudvps.naskodaskalov.scorekeeperapp.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamA_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-meduium"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="TeamA"
                android:textColor="#FFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="0"
                android:textColor="#fff"
                android:textSize="56sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/yellow_card"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/yellow_card" />

                    <TextView
                        android:id="@+id/team_a_yellow_cards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="sans-serif"
                        android:text="0"
                        android:textColor="#4A5704"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/red_card"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/red_card" />

                    <TextView
                        android:id="@+id/team_a_red_cards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="sans-serif"
                        android:text="0"
                        android:textColor="#4A5704"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/corner_flag" />

                    <TextView
                        android:id="@+id/corners_team_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="sans-serif"
                        android:text="0"
                        android:textColor="#4A5704"
                        android:textSize="20sp" />
                </RelativeLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="addNewGoalTeamA"
                android:background="#15ac89"
                android:text="@string/add_goal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#15ac89"
                android:onClick="addNewYellowCardTeamA"
                android:text="@string/add_yellow_card" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#15ac89"
                android:onClick="addNewRedCardTeamA"
                android:text="@string/add_red_card" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#15ac89"
                android:onClick="addNewCornerTeamA"
                android:text="@string/add_corner" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamB_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-meduium"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="TeamB"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="0"
                android:textColor="#fff"
                android:textSize="56sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/yellow_card" />

                    <TextView
                        android:id="@+id/team_b_yellow_cards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="sans-serif"
                        android:text="0"
                        android:textColor="#4A5704"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/red_card" />

                    <TextView
                        android:id="@+id/team_b_red_cards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="sans-serif"
                        android:text="0"
                        android:textColor="#4A5704"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/corner_flag" />

                    <TextView
                        android:id="@+id/corners_team_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="sans-serif"
                        android:text="0"
                        android:textColor="#4A5704"
                        android:textSize="20sp" />
                </RelativeLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="addNewGoalTeamB"
                android:background="#15ac89"
                android:text="@string/add_goal"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#15ac89"
                android:onClick="addNewYellowCardTeamB"
                android:text="@string/add_yellow_card" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#15ac89"
                android:onClick="addNewRedCardTeamB"
                android:text="@string/add_red_card" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#15ac89"
                android:onClick="addNewCornerTeamB"
                android:text="@string/add_corner" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:onClick="finishGame"
            android:padding="15dp"
            android:background="#15ac89"
            android:text="@string/btn_new_game" />

        <Button
            android:id="@+id/inplay_back_btn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:onClick="goBack"
            android:padding="15dp"
            android:background="#15ac89"
            android:text="@string/inplay_back_btn" />
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
